feat: Add Word to PDF functionality and PDF unlock service
- Implemented Word to PDF screen and file picker for Word documents.
- Added PDF unlock service to handle password-protected PDFs, including validation and unlocking functionality.
- Introduced new colors for Word to PDF and unlock PDF features in the theme.
- Temporarily disabled subscription features with clear TODOs for future re-enablement.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -120,6 +120,15 @@ dependencies {
     // Apache PDFBox for PDF encryption (Password Protect feature)
     implementation("com.tom-roush:pdfbox-android:2.0.27.0")
 
+    // Apache POI for Word document processing (Word to PDF feature)
+    implementation("org.apache.poi:poi:5.2.3")
+    implementation("org.apache.poi:poi-ooxml:5.2.3") {
+        exclude group: 'org.apache.xmlgraphics', module: 'batik-all'
+        exclude group: 'de.rototor.pdfbox', module: 'graphics2d'
+        exclude group: 'org.apache.xmlgraphics', module: 'fop'
+    }
+    implementation("org.apache.poi:poi-scratchpad:5.2.3")
+
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
     } else {
