--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -114,6 +114,10 @@ dependencies {
     // Google Play Billing for subscriptions
     implementation("com.android.billingclient:billing:6.0.1")
 
+    // Google Play Core for In-App Updates
+    implementation("com.google.android.play:app-update:2.1.0")
+    implementation("com.google.android.play:app-update-ktx:2.1.0")
+
     // ML Kit Text Recognition for OCR (on-device)
     implementation("com.google.mlkit:text-recognition:16.0.0")
 
