--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-html-to-pdf": "^1.3.0",
     "react-native-iap": "^14.7.6",
     "react-native-image-picker": "^8.2.1",
+    "react-native-camera": "^4.2.1",
     "react-native-in-app-review": "^4.4.2",
     "react-native-nitro-modules": "^0.31.1",
     "react-native-pdf": "^7.0.3",
