fix: Resolve react-native-camera flavor ambiguity in build configuration

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -91,6 +91,9 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0.0"
+
+        // Fix for react-native-camera flavor ambiguity
+        missingDimensionStrategy 'react-native-camera', 'general'
     }
     signingConfigs {
         debug {
