--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
@@ -20,6 +21,7 @@
     "react": "19.2.0",
     "react-native": "0.83.1",
     "react-native-blob-util": "^0.24.6",
+    "react-native-camera": "^4.2.1",
     "react-native-draggable-flatlist": "^4.0.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.30.0",
@@ -27,7 +29,6 @@
     "react-native-html-to-pdf": "^1.3.0",
     "react-native-iap": "^14.7.6",
     "react-native-image-picker": "^8.2.1",
-    "react-native-camera": "^4.2.1",
     "react-native-in-app-review": "^4.4.2",
     "react-native-nitro-modules": "^0.31.1",
     "react-native-pdf": "^7.0.3",
@@ -58,6 +59,7 @@
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "patch-package": "^8.0.1",
     "prettier": "2.8.8",
     "react-test-renderer": "19.2.0",
     "sharp": "^0.34.5",
